k8s/mydataapp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mydataapp
  labels:
    name: mydataapp
