k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mydataapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: postgres-java-app_app:latest
        imagePullPolicy: Never  
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mydataapp
spec:
  selector:
    app: backend
  ports:
  - port: 8085
    targetPort: 8085
