k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend  # Имя, которое ищет ваш фронтенд
  namespace: mydataapp
spec:
  type: ExternalName
  externalName: backend-service.mydataapp.svc.cluster.local
