k8s/ingressv2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydataapp-ingress
  namespace: mydataapp
  annotations:
    kubernetes.io/ingress.class: "nginx" # Возможно, потребуется
      #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
      #    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"   
spec:
  tls:
  - hosts:
    - mydataapp.app
    secretName: mydataapp-tls  
  rules:
  # Правило для доступа по IP (127.0.0.1)
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  # Дополнительное правило для красивого домена
  - host: mydataapp.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8085
